# social-fastapi-htmx

./: .env  app.py  database.py  models.py  pyproject.toml  social.db
migrations/: step1.create_post_table.sql  step3.migrate_posts.sql  step4.create_likes_table.sql  step5.create_index.sql  step6.create_comments.sql  step7.add_pictures.sql
templates/: add_comment.html  add_post.html  base.html  comment_counter.html  comment_form.html  comment_thread.html  index.html  like_button.html  like_counter.html  login.html  navbar.html  post.html  post_footer.html  posts.html  signup.html  user_form.html
